--- a/src/R/pcgrr/inst/templates/bibliography.bib
+++ b/src/R/pcgrr/inst/templates/bibliography.bib
@@ -1,3 +1,20 @@
+@ARTICLE{Fernandez2019-mk,
+  title     = "{Cancer-Specific} Thresholds Adjust for Whole Exome
+               {Sequencing--Based} Tumor Mutational Burden Distribution",
+  author    = "Fernandez, Evan M and Eng, Kenneth and Beg, Shaham and Beltran,
+               Himisha and Faltas, Bishoy M and Mosquera, Juan Miguel and
+               Nanus, David M and Pisapia, David J and Rao, Rema A and
+               Robinson, Brian D and Rubin, Mark A and Elemento, Olivier and
+               Sboner, Andrea and Shah, Manish A and Song, Wei",
+  journal   = "JCO Precision Oncology",
+  publisher = "American Society of Clinical Oncology",
+  number    =  3,
+  pages     = "1-12",
+  month     =  dec,
+  year      =  2019,
+  url       = "https://doi.org/10.1200/PO.18.00400"
+}
+
 @ARTICLE{Bailey2018-os,
    title    = "Comprehensive Characterization of Cancer Driver Genes and
                Mutations",
