--- a/src/R/pcgrr/inst/templates/pcgr_rmarkdown/mutational_burden.Rmd
+++ b/src/R/pcgrr/inst/templates/pcgr_rmarkdown/mutational_burden.Rmd
@@ -1,6 +1,9 @@
 ### Tumor mutational burden (TMB)
 
-The size of the targeted (coding) genomic region has been defined as: __`r pcg_report[['metadata']][['config']][['assay_properties']][['target_size_mb']]` Mb__. For estimation of TMB, PCGR employs the same approach as was outlined in a recently published large-scale study of TMB [[@Chalmers2017-cz]](https://www.ncbi.nlm.nih.gov/pubmed/28420421), i.e. counting all coding, somatic base substitutions and indels in the targeted regions, including synonymous alterations. 
+For estimation of TMB, PCGR employs two different approaches/algorithms ( __all_coding__, and __nonsyn__, see details outlined in the [Documentation](#Documentation) below).
+
+TMB algorithm chosen by user: __`r pcg_report[['metadata']][['config']][['tmb']][['algorithm']]`__
+Size of targeted coding region: __`r pcg_report[['metadata']][['config']][['assay_properties']][['target_size_mb']]` Mb__
 
 Estimated mutational burden: __`r pcg_report[['content']][['tmb']][['variant_statistic']][['tmb_estimate']]`__ __mutations/Mb__ 
 
@@ -20,8 +23,8 @@ The plot below indicates how the mutational burden estimated for the query tumor
 ```{r tumor_tmb_tcga_plot, echo = F, fig.width=12, fig.height=9, eval=T}
 tmb_plot <- pcgrr::plot_tmb_primary_site_tcga(pcg_report[['content']][['tmb']][['tcga_tmb']], 
                                               p_site = pcg_report[['metadata']][['config']][['tumor_properties']][['tumor_type']], 
-                                              tmb_estimate = pcg_report[['content']][['tmb']][['variant_statistic']][['tmb_estimate']], 
-                                              tmb_high = pcg_report[['metadata']][['config']][['tmb']][['tmb_intermediate_limit']])
+                                              tmb_estimate = pcg_report[['content']][['tmb']][['variant_statistic']][['tmb_estimate']],
+                                              algorithm = pcg_report[['content']][['tmb']][['algorithm']])
 tmb_plot
 htmltools::br()
 ```
