fix color warning in dev

--- a/src/R/pcgrr/inst/templates/cpsr_rmarkdown/cpsr_documentation.Rmd
+++ b/src/R/pcgrr/inst/templates/cpsr_rmarkdown/cpsr_documentation.Rmd
@@ -46,7 +46,7 @@ for(n in names(cps_report$metadata$pcgr_db_release)){
 
 <br>
 
-All coding, <b>non-ClinVar</b> variants in the set of cancer predisposition genes have been classified according to a <i>five-level pathogenicity scheme</i> (coined <b>CPSR_CLASSIFICATION</b> in the tables above). The scheme has the same five levels as those employed by ClinVar, e.g. pathogenic/likely pathogenic/VUS/likely benign/benign. The classification performed by CPSR is rule-based, implementing most of the ACMG criteria outlined in [SherLoc](https://www.invitae.com/en/variant-classification/) ([Nykamp et al., Genetics in Medicine, 2017](https://www.ncbi.nlm.nih.gov/pubmed/28492532)), and [CharGer](https://github.com/ding-lab/CharGer). Information on cancer predisposition genes (mode of inheritance, loss-of-funcion mechanism etc.) is largely harvested from [Maxwell et al., Am J Hum Genet, 2016](https://www.ncbi.nlm.nih.gov/pubmed/27153395). 
+All coding, <b>non-ClinVar</b> variants in the set of cancer predisposition genes have been classified according to a <i>five-level pathogenicity scheme</i> (coined <b>CPSR_CLASSIFICATION</b> in the tables above). The scheme has the same five levels as those employed by ClinVar, e.g. pathogenic/likely pathogenic/VUS/likely benign/benign. The classification performed by CPSR is rule-based, implementing most of the ACMG criteria outlined in [SherLoc](https://www.invitae.com/en/variant-classification/) ([Nykamp et al., Genetics in Medicine, 2017](https://www.ncbi.nlm.nih.gov/pubmed/28492532)), and [CharGer](https://github.com/ding-lab/CharGer). Information on cancer predisposition genes (mode of inheritance, loss-of-funcion mechanism etc.) is largely harvested from [Maxwell et al., Am J Hum Genet, 2016](https://www.ncbi.nlm.nih.gov/pubmed/27153395) and [Genomics England PanelApp](https://panelapp.genomicsengland.co.uk/). 
 
 The ACMG criteria listed in the table below form the basis for the <b>CPSR_CLASSIFICATION</b> implemented in CPSR. Specifically, the <i>score</i> column indicates how much each evidence item contribute to either of the two pathogenicity poles (positive values indicate pathogenic support, negative values indicate benign support). Evidence score along each pole ('B' and 'P') are aggregated, and if there is conflicting or little evidence it will be classified as a VUS. The contribution of ACMG evidence items pr. variant can be seen in the <b>CPSR_CLASSIFICATION_CODE</b> and <b>CPSR_CLASSIFICATION_DOC</b> variables.
 <br><br>
