fix bibliography entry
Pandoc seems to be complaining about the % in that
entry. Adjusted with a valid doi link.

```
Error reading bibliography file bibliography.bib:
(line 190, column 15):
unexpected 'e'
Error: pandoc document conversion failed with error 25
Execution halted
```

--- a/pcgrr/inst/templates/bibliography.bib
+++ b/pcgrr/inst/templates/bibliography.bib
@@ -186,7 +186,7 @@
   pages    = "4--23",
   month    =  jan,
   year     =  2017,
-  url      =  "https://dx.doi.org/10.1016%2Fj.jmoldx.2016.10.002",
+  url      =  "https://doi.org/10.1016/j.jmoldx.2016.10.002",
   language = "en"
 }
 
