--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_documentation.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_documentation.Rmd
@@ -7,6 +7,14 @@ Row
 
 ### Settings - sample and report {data-padding=20}
 
+```{r get_VEP_transcript_set, echo=F,results='asis'}
+transcript_set_gencode <- "GENCODE - basic set ('--gencode_basic')"
+if(pcg_report[['metadata']][['config']][['other']][['vep_gencode_all']] == T){
+  transcript_set_gencode <- "GENCODE - all transcripts"
+}
+
+```
+
 The report is generated with _[PCGR](https://github.com/sigven/pcgr)_  version `r pcg_report[['metadata']][['pcgr_version']]`.
 <br><br>
 Key report configuration settings:
@@ -26,6 +34,10 @@ Key report configuration settings:
   * All reference signatures: <b> __`r pcg_report[['metadata']][['config']][['msigs']][['all_reference_signatures']]`__ </b>
   * Inclusion of artefact signatures: <b> __`r pcg_report[['metadata']][['config']][['msigs']][['include_artefact_signatures']]`__ </b>
 * Clinical trial inclusion: <b> __`r trial_inclusion`__ </b>
+* Variant Effect Predictor (VEP) settings:
+  * Transcript set: __`r transcript_set_gencode`__
+  * Transcript pick order: __`r pcg_report[['metadata']][['config']][['other']][['vep_pick_order']]`__
+  * Regulatory regions annotation: __`r pcg_report[['metadata']][['config']][['other']][['vep_regulatory']]`__
 
 <br>
 Sample information:
