--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_documentation.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_documentation.Rmd
@@ -63,10 +63,14 @@ Estimated properties on DNA cellularity and ploidy:
 
 The report generated with PCGR is based on the following underlying tools and knowledge resources:
 
+* __Databundle version__
+  
+  * __`r pcg_report$metadata$pcgr_db_release$bundle_version$version`__
+  
 * __Software__ 
 ```{r list_software, echo=F,results='asis'}
 for(n in names(pcg_report$metadata$pcgr_db_release)){
-  if(n == 'mosdepth'){
+  if(n == 'mosdepth' | n == 'bundle_version'){
     next
   }
   if(pcg_report$metadata$pcgr_db_release[[n]]$resource_type == 'software'){
@@ -76,6 +80,8 @@ for(n in names(pcg_report$metadata$pcgr_db_release)){
 }
 
 ```
+<br>
+
 
 * __Databases/datasets__ 
 ```{r list_db, echo=F,results='asis'}
