--- a/pcgrr/inst/templates/pcgr_rmarkdown/documentation.Rmd
+++ b/pcgrr/inst/templates/pcgr_rmarkdown/documentation.Rmd
@@ -4,7 +4,7 @@
 
 The analysis performed in the cancer genome report is based on the following underlying tools and knowledge resources:
 
-* __Bundle version__
+* ____PCGR databundle version____
 
   * __`r pcg_report$metadata$pcgr_db_release$bundle_version$version`__
 
