--- a/pcgrr/inst/templates/cpsr_rmarkdown/cpsr_documentation.Rmd
+++ b/pcgrr/inst/templates/cpsr_rmarkdown/cpsr_documentation.Rmd
@@ -15,7 +15,7 @@ The analysis performed in the cancer genome report is based on the following und
 
 * __PCGR databundle version__
 
-  * __`r pcg_report$metadata$pcgr_db_release$bundle_version$version`__
+  * __`r cps_report$metadata$pcgr_db_release$bundle_version$version`__
 
 
 * __Software__ 
