bundle version fix (display)

--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_documentation.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_documentation.Rmd
@@ -8,7 +8,7 @@ Row
 ### Settings - sample and report {data-padding=20}
 
 ```{r get_VEP_transcript_set, echo=F,results='asis'}
-transcript_set_gencode <- "GENCODE - basic set ('--gencode_basic')"
+transcript_set_gencode <- "GENCODE - basic set"
 if(pcg_report[['metadata']][['config']][['other']][['vep_gencode_all']] == T){
   transcript_set_gencode <- "GENCODE - all transcripts"
 }
@@ -86,7 +86,7 @@ for(n in names(pcg_report$metadata$pcgr_db_release)){
 * __Databases/datasets__ 
 ```{r list_db, echo=F,results='asis'}
 for(n in names(pcg_report$metadata$pcgr_db_release)){
-  if(pcg_report$metadata$pcgr_db_release[[n]]$resource_type == 'db' & n != 'gwas' & n != 'ct'){
+  if(pcg_report$metadata$pcgr_db_release[[n]]$resource_type == 'db' & n != 'gwas' & n != 'ct' & n != 'bundle_version'){
     s <- paste0('    * [',pcg_report$metadata$pcgr_db_release[[n]]$name,'](',pcg_report$metadata$pcgr_db_release[[n]]$url,') - ',pcg_report$metadata$pcgr_db_release[[n]]$description, ' (',pcg_report$metadata$pcgr_db_release[[n]]$version,')')
     cat(s,sep="\n")
   }
